--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,27 @@
-== README
-
-1.) Install Homebrew: https://brew.sh/
-2.) Brew install git
-	2a.) git clone the project directory somewhere project_directory
-3.) Install RMV: https://rvm.io/rvm/install
-	3b.) rvm install 2.0.0
-	3c.) rvm use 2.0.0
-	3d.) gem install bundler
-	3e.) cd project_directory && bundle install //this will install rails
-4.) Brew install postgres
-	4b.) brew services start postgres
-	4c.) install http://www.psequel.com/
-5.) Brew install openslide
-6.) Brew install python3
-7.) pip install virtualenv  // Development only
-	7b.) virtualenv --system-site-packages -p python3 env // Development only
-	7c.) source env/bin/activate
 
 
-Test out that you can view your postgres DB using Psequel
+1. Install Homebrew: https://brew.sh/
+2. Brew install git
+	a.) git clone the project directory somewhere project_directory
+3. Install RMV: https://rvm.io/rvm/install
+	a.) rvm install 2.0.0
+	b.) rvm use 2.0.0
+	c.) gem install bundler
+	d.) cd project_directory && bundle install //this will install rails
+4. Brew install postgres
+	a.) brew services start postgres
+	b.) install http://www.psequel.com/
+5. Brew install openslide
+6. Brew install python3
+7. pip install virtualenv  // Development only
+	a.) virtualenv --system-site-packages -p python3 env // Development only
+	b.) source env/bin/activate
 
-Test out that you can start the rails server
-	1.) cd project_directory && rails s
-	2.) navigate to localhost:3000 in your browser
+#Test out that you can view your postgres DB using Psequel
 
-Test out that openslide works: 
+#Test out that you can start the rails server
+	1. cd project_directory && rails s
+	2. navigate to localhost:3000 in your browser
+
+#Test out that openslide works: 
 	python3 deepzoom_tile.py data/NAMEOFSVSHERE.svs
