--- a/README.rdoc
+++ b/README.rdoc
@@ -3,26 +3,26 @@
 
 1. Install Homebrew: https://brew.sh/
 2. Brew install git
-	a. git clone the project directory somewhere project_directory
+	* git clone the project directory somewhere project_directory
 3. Install RMV: https://rvm.io/rvm/install
-	a. rvm install 2.0.0
-	b. rvm use 2.0.0
-	c. gem install bundler
-	d. cd project_directory && bundle install //this will install rails
+	* rvm install 2.0.0
+	* rvm use 2.0.0
+	* gem install bundler
+	* cd project_directory && bundle install //this will install rails
 4. Brew install postgres
-	a. brew services start postgres
-	b. install http://www.psequel.com/
+	* brew services start postgres
+	* install http://www.psequel.com/
 5. Brew install openslide
 6. Brew install python3
 7. pip install virtualenv  // Development only
-	a. virtualenv --system-site-packages -p python3 env // Development only
-	b. source env/bin/activate
+	* virtualenv --system-site-packages -p python3 env // Development only
+	* source env/bin/activate
 
 #Test out that you can view your postgres DB using Psequel
 
 #Test out that you can start the rails server
-	1. cd project_directory && rails s
-	2. navigate to localhost:3000 in your browser
+	* cd project_directory && rails s
+	* navigate to localhost:3000 in your browser
 
 #Test out that openslide works: 
-	python3 deepzoom_tile.py data/NAMEOFSVSHERE.svs
+	* python3 deepzoom_tile.py data/NAMEOFSVSHERE.svs
